# aiidalab-qe-muon

./: README.md  pyproject.toml  setup.cfg
aiidalab_qe_muon.egg-info/: PKG-INFO  requires.txt
aiidalab_qe_muon/app/: codes.py  utils_results.py  workchain.py
aiidalab_qe_muon/workflows/: implantmuonworkchain.py
src/aiidalab_qe_muon/: __main__.py
src/aiidalab_qe_muon/app/: __init__.py  settings.py  utils_results.py  workchain.py
src/aiidalab_qe_muon/app/codes/: mvc.py
src/aiidalab_qe_muon/app/configuration/: helper_widgets.py  model.py  view.py
src/aiidalab_qe_muon/app/guides/: 0_Sites.html  0_Stopping sites.html  0_basic.html  0_sites.html  1_Spin relaxation function.html  1_SpinRelaxation.html  1_sites+polarization.html
src/aiidalab_qe_muon/app/results/: model.py  view.py
src/aiidalab_qe_muon/app/results/sub_mvc/: findmuonmodel.py  findmuonwidget.py  multiple_undi_mvc.py  undimodel.py  undiwidget.py
src/aiidalab_qe_muon/app/structure_importer/: structure.py
src/aiidalab_qe_muon/app/undi_interface/: model.py  widget.py
src/aiidalab_qe_muon/undi_interface/: model.py  utils.py  widget.py
src/aiidalab_qe_muon/undi_interface/calculations/: pythonjobs.py  simple_shelljob.py
src/aiidalab_qe_muon/undi_interface/workflows/: workgraphs.py
src/aiidalab_qe_muon/utils/: KT.py  data.py  export_findmuon.py
src/aiidalab_qe_muon/workflows/: implantmuonworkchain.py
src/aiidalab_qe_muon/workflows/utils/: KT.py
tests/: conftest.py  test_builder.py  test_submit.py
tests/test_submit/: test_create_builder_default.yml
(+1 files in other folders)
